@@ -2,6 +2,8 @@
 
     * las/arch/x86_64/main.c: Implemented a part of the assembler
 
+    * las/arch/x86_64/main.c: Added the CMP instruction
+
 
 2013-12-07  Hirochika Asai  <asai@scyphus.co.jp>
 
